--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ header * {
 img{
     width: 200px;
     border-radius: 10px;
+    box-shadow: 10px 10px 10px 1px #1256EA;
 }
 h2{
     text-align: center;
